--- a/samples/compose/two-clusters/docker-compose.yml
+++ b/samples/compose/two-clusters/docker-compose.yml
@@ -1,51 +1,51 @@
 version: "3.1"
 
 services:
-  scheduler_s1:
+  scheduler_cpu:
 #    build:
 #      context: ./base
 #      dockerfile: Dockerfile
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-scheduler-s1
+    hostname: dask-scheduler-cpu
     ports:
       - "18786:8786"
       - "18787:8787"
     command: ["dask-scheduler"]
 
-  scheduler_s2:
+  scheduler_gpu:
     #    build:
     #      context: ./base
     #      dockerfile: Dockerfile
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-scheduler-s2
+    hostname: dask-scheduler-gpu
     ports:
       - "28786:8786"
       - "28787:8787"
     command: ["dask-scheduler"]
 
-  worker_s1_1:
+  worker_cpu_1:
 #    build:
 #      context: ./base
 #      dockerfile: Dockerfile
 #    image: daskdev/dask
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-worker-s1-1
-    command: ["dask-worker", "tcp://scheduler_s1:8786", "--name", "worker-s1-1"]
+    hostname: dask-worker-cpu-1
+    command: ["dask-worker", "tcp://scheduler_cpu:8786", "--name", "worker-cpu-1"]
 
-  worker_s1_2:
+  worker_cpu_2:
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-worker-s1-2
-    command: ["dask-worker", "tcp://scheduler_s1:8786", "--name", "worker-s1-2"]
+    hostname: dask-worker-cpu-2
+    command: ["dask-worker", "tcp://scheduler_cpu:8786", "--name", "worker-cpu-2"]
 
-  worker_s2_1:
+  worker_gpu_1:
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-worker-s2-1
-    command: ["dask-worker", "tcp://scheduler_s2:8786", "--name", "worker-s2-1"]
+    hostname: dask-worker-gpu-1
+    command: ["dask-worker", "tcp://scheduler_gpu:8786", "--name", "worker-gpu-1"]
 
-  worker_s2_2:
+  worker_gpu_2:
     image: celsiustx/rightsize_99_standard_py37
-    hostname: dask-worker-s2-2
-    command: ["dask-worker", "tcp://scheduler_s2:8786", "--name", "worker-s2-2"]
+    hostname: dask-worker-gpu-2
+    command: ["dask-worker", "tcp://scheduler_gpu:8786", "--name", "worker-gpu-2"]
 
 
 #  base-notebook:
