--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -59,7 +59,8 @@ Parameters:
   ComputeEnvInstanceTypes: 
     Type: CommaDelimitedList
 #    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,c6g.4xlarge,c6g.8xlarge,c6g.18xlarge,p2.xlarge,p2.8xlarge,p3.16xlarge"
-    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,p2.xlarge,p2.8xlarge,p3.16xlarge"
+#    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,p2.xlarge,p2.8xlarge,p3.16xlarge"
+    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,p2.xlarge,p2.8xlarge"
     Description: "The instance types for the compute environment as a comma-separated list"
   CustomRole:
     Type: String
