We should be naming the bucket during creation.

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -543,6 +543,7 @@ Resources:
     Type: 'AWS::S3::Bucket'
     DeletionPolicy: Retain
     Properties:
+      BucketName: !Sub celsius-metaflow-${EnvironmentName}
       AccessControl: Private
       BucketEncryption:
         ServerSideEncryptionConfiguration:
