--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -57,7 +57,7 @@ Parameters:
     Description: 'Desired Starting VCPUs for Batch Compute Environment [0-16]'
   ComputeEnvInstanceTypes: 
     Type: CommaDelimitedList
-    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,p2.xlarge,p2.8xlarge"
+    Default: "c5.4xlarge,c5.9xlarge,c5.18xlarge,g4dn.xlarge,g4dn.2xlarge,g4dn.4xlarge,g4dn.8xlarge,g4dn.12xlarge,g4dn.16xlarge"
     Description: "The instance types for the compute environment as a comma-separated list"
   CustomRole:
     Type: String
@@ -74,6 +74,10 @@ Parameters:
     Default: 'true'
     AllowedValues: ['false', 'true']
     Description: 'Enable Sagemaker Notebooks'
+  EnvironmentName:
+    Type: String
+    Default: 'prod'
+    Description: 'Name of the deployment environment'
 
 Mappings:
   ServiceInfo:
