--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -1018,13 +1018,31 @@ Resources:
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
-              Sid: ObjectAccessBatch
+            - Sid: ObjectAccessBatch
               Effect: Allow
               Action:
                 - s3:PutObject
                 - s3:GetObject
+                - es:GetCompatibleElasticsearchVersions
+                - es:DescribeElasticsearchDomains
                 - s3:DeleteObject
-              Resource: !Join ['', [ !GetAtt 'MetaflowS3Bucket.Arn', '/*' ]]
+              Resource:
+                - arn:aws:es:*:386834949250:domain/*
+                - !Join ['', [ !GetAtt 'MetaflowS3Bucket.Arn', '/*' ]]
+            - Sid: ESAccessBatch
+              Effect: Allow
+              Action:
+                - es:DescribeReservedElasticsearchInstanceOfferings
+                - es:DescribeInboundCrossClusterSearchConnections
+                - es:DescribeReservedElasticsearchInstances
+                - es:ListDomainNames
+                - es:ListElasticsearchInstanceTypeDetails
+                - es:ListElasticsearchInstanceTypes
+                - es:DescribeOutboundCrossClusterSearchConnections
+                - es:DescribeElasticsearchInstanceTypeLimits
+                - es:ListElasticsearchVersions
+                - es:DescribeElasticsearchDomain
+              Resource: +
         - PolicyName: DenyPresignedBatch
           PolicyDocument:
             Version: '2012-10-17'
