Extend the cleanup time for batch See: * https://github.com/aws/amazon-ecs-agent/issues/1440 * https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-agent-config.html

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -120,9 +120,13 @@ Resources:
             Content-Type: text/x-shellscript; charset="us-ascii"
             #!/bin/bash
             # Set any ECS agent configuration options
-            echo ECS_CLUSTER=default>>/etc/ecs/ecs.config
+            # see https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-agent-config.html
+            echo ECS_CLUSTER=default >> /etc/ecs/ecs.config
+            echo ECS_DISABLE_IMAGE_CLEANUP=false >> /etc/ecs/ecs.config
             echo ECS_IMAGE_CLEANUP_INTERVAL=60m >> /etc/ecs/ecs.config
             echo ECS_IMAGE_MINIMUM_CLEANUP_AGE=60m >> /etc/ecs/ecs.config
+            echo ECS_CONTAINER_STOP_TIMEOUT=5m >> /etc/ecs/ecs.config
+            echo ECS_CONTAINER_START_TIMEOUT=10 >> /etc/ecs/ecs.config
             --==BOUNDARY==--
 
         BlockDeviceMappings:
