add es perms follows perms maually created here: https://us-east-1.console.aws.amazon.com/iam/home#/roles/dsstack-ctxcommon-rightsize-metafl-BatchS3TaskRole-1OYD11N6T596G$jsonEditor?policyName=inline_celsius-elasticsearch-read&step=edit

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -1019,6 +1019,44 @@ Resources:
               Effect: Allow
               Action: s3:ListBucket
               Resource: !GetAtt 'MetaflowS3Bucket.Arn'
+        - PolicyName: CustomESRead
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+            - Sid: ESDomainRead
+              Effect: Allow
+              Action:
+                - es:ESCrossClusterGet
+                - es:ESHttpHead
+                - es:DescribeElasticsearchDomain
+                - es:ESHttpGet
+                - es:GetCompatibleElasticsearchVersions
+                - es:ListTags
+                - es:GetUpgradeStatus
+                - es:DescribeElasticsearchDomainConfig
+                - es:DescribeElasticsearchDomains
+                - es:GetUpgradeHistory
+              Resource: arn:aws:es:*:386834949250:domain/*
+            - Sid: ESBroadRead
+              Effect: Allow
+              Action:
+                - es:DescribeReservedElasticsearchInstanceOfferings
+                - es:DescribeInboundCrossClusterSearchConnections
+                - es:DescribeReservedElasticsearchInstances
+                - es:ListDomainNames
+                - es:ListElasticsearchInstanceTypeDetails
+                - es:ListElasticsearchInstanceTypes
+                - es:DescribeOutboundCrossClusterSearchConnections
+                - es:DescribeElasticsearchInstanceTypeLimits
+                - es:ListElasticsearchVersions
+              Resource: '*'
+            - Sid: ESDomainLimitedWrite
+              Effect: Allow
+              Action:
+                - es:ESHttpPost
+                - es:ESHttpPut
+                - es:ESHttpDelete
+              Resource: arn:aws:es:*:386834949250:domain/*
         - PolicyName: CustomS3Batch
           PolicyDocument:
             Version: '2012-10-17'
