use latest ecs image version should trigger infrastructure update, pushing new image version

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -1283,6 +1283,7 @@ Resources:
         LaunchTemplate:
           LaunchTemplateId: !Ref RightsizeMetaflowBatchLaunchTemplate
           Version: "$Latest"
+        UpdateToLatestImageVersion: true
         MaxvCpus: !Ref MaxVCPUBatch
         SecurityGroupIds:
           - !Ref VPCSecurityGroup
